# pm

./: .gitignore  .impeccable.md  AGENTS.md  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.workbuddy/memory/: 2025-05-02.md  2025-05-04.md
docs/: ai-inbox-implementation-plan.md  ai-inbox-spec.md  spec.md
docs/plans/: 2026-04-23-v1-implementation.md
docs/plans/v1/: 01-init-tauri.md  02-deps.md  03-tailwind.md  04-shadcn.md  05-vitest.md  06-rust-models.md  07-rust-errors.md  08-db-migrations.md  09-ipc-ping.md  10-projects-db.md  11-projects-ipc.md  12-project-relations.md  13-task-groups.md  14-tasks-db.md  15-tasks-ipc.md  16-tags.md  17-attachments.md  18-search.md  19-trash.md  20-backup.md  21-export.md  22-notifications.md  23-ts-types.md  24-api-contract.md  25-query-setup.md  26-project-hooks.md  27-task-hooks.md  28-other-hooks.md  29-app-shell.md  (+10 more)
src/: index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  models.rs
src-tauri/src/commands/: ai.rs  attachments.rs  backup.rs  export.rs  mod.rs  notifications.rs  project_relations.rs  projects.rs  search.rs  tags.rs  task_groups.rs  tasks.rs  trash.rs
src-tauri/src/db/: ai_inbox.rs  ai_models.rs  attachments.rs  migrations.rs  mod.rs  project_relations.rs  projects.rs  search.rs  tags.rs  task_groups.rs  tasks.rs  trash.rs
src/design/: tokens.ts
src/lib/: api.ts  date.test.ts  date.ts  mockData.ts  projectColor.ts  queryClient.ts  types.ts
(+32 files in other folders)
