[package]
name = "pm"
version = "0.1.0"
description = "pm — personal project manager"
authors = []
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
thiserror = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
directories = "5"
chrono = { version = "0.4", features = ["clock"] }
tauri-plugin-notification = "2"
tokio = { version = "1", features = ["time"] }
